server.log
/home/okalexiiis/dev/gamespot-api/node_modules/.pnpm/ts-node@10.9.2_@types+node@25.9.3_typescript@6.0.3/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/middlewares/auth.middleware.ts(25,9): error TS2339: Property 'user' does not exist on type 'Request<ParamsDictionary, any, any, ParsedQs, Record<string, any>>'.

    at createTSError (/home/okalexiiis/dev/gamespot-api/node_modules/.pnpm/ts-node@10.9.2_@types+node@25.9.3_typescript@6.0.3/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/okalexiiis/dev/gamespot-api/node_modules/.pnpm/ts-node@10.9.2_@types+node@25.9.3_typescript@6.0.3/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/okalexiiis/dev/gamespot-api/node_modules/.pnpm/ts-node@10.9.2_@types+node@25.9.3_typescript@6.0.3/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/okalexiiis/dev/gamespot-api/node_modules/.pnpm/ts-node@10.9.2_@types+node@25.9.3_typescript@6.0.3/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/okalexiiis/dev/gamespot-api/node_modules/.pnpm/ts-node@10.9.2_@types+node@25.9.3_typescript@6.0.3/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1839:10)
    at Object.require.extensions.<computed> [as .ts] (/home/okalexiiis/dev/gamespot-api/node_modules/.pnpm/ts-node@10.9.2_@types+node@25.9.3_typescript@6.0.3/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2339 ]
}
